Se modifica el footer en html y css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </main>
    
     <footer>
-        <p>Desarrollado por Rossy Palacin</p>
+        <img id="githubImg" src="/assets/github-logo_icon-icons.com_73546.svg"/>
+        <img id="linkedinImg" src="/assets/linkedin.svg"/>
+        <p>Rossy Palacin</p>
     </footer>
     <script src="app.js"></script>
 </body>
