Cambios en el css - responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="titulo">
-       <img class="titulo_logo" src="./assets/Logo.png">
+       <img class="titulo_logo" src="./assets/magnifyingglass_122794.svg">
         <h1 class="titulo_texto"></h1> 
     </header>
     <main>
