Se realizan cambios de colores en el proyecto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="salida_texto">
             <p id="parrafoSalidaTexto"></p>
             <div id="salida-texto-caja">
-                <img id="imagenSalidaTexto" class="salida_texto_imagen" src="./assets/Muñeco.png">
+                <img id="imagenSalidaTexto" class="salida_texto_imagen" src="./assets/persona-buscando.png">
                 <h2 class="texto1_salida_texto">Ningún mensaje fue encontrado</h2>
                 <p class="texto2_salida_texto">Ingresa el texto que desees encriptar o desencriptar</p>
             </div>
@@ -40,8 +40,8 @@
     </main>
    
     <footer>
-        <img id="githubImg" src="/assets/github-logo_icon-icons.com_73546.svg"/>
-        <img id="linkedinImg" src="/assets/linkedin.svg"/>
+        <a href="https://github.com/ROZZYNUEZ14?tab=repositories"><img id="githubImg" src="/assets/github-logo_icon-icons.com_73546.svg"/></a>
+        <a href="https://www.linkedin.com/in/rossy-jasmin-palacin-nu%C3%B1ez-05355629b/"><img id="linkedinImg" src="/assets/linkedin.svg"/></a>
         <p>Rossy Palacin</p>
     </footer>
     <script src="app.js"></script>
