Se corrigen errores en los logos

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </main>
    
     <footer>
-        <a href="https://github.com/ROZZYNUEZ14?tab=repositories"><img id="githubImg" src="/assets/github-logo_icon-icons.com_73546.svg"/></a>
-        <a href="https://www.linkedin.com/in/rossy-jasmin-palacin-nu%C3%B1ez-05355629b/"><img id="linkedinImg" src="/assets/linkedin.svg"/></a>
+        <a href="https://github.com/ROZZYNUEZ14?tab=repositories"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/rossy-jasmin-palacin-nu%C3%B1ez-05355629b/"><i class="fa-brands fa-linkedin"></i></a>
         <p>Rossy Palacin</p>
     </footer>
     <script src="app.js"></script>
